--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,124 @@
 body {
-  font-family: sans-serif;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+h1 {
+    color: #538d4e;;
+    text-align:  center;
+    font-size: 1.5rem;
+    font-style: italic;
+}
+
+header {
+    color: #538d4e;
+    margin: 2rem;
+    font-size: 18px;
+}
+
+
+
+#about {
+  display: flex;
+  justify-content: center;
+  padding: 3rem;
+}
+
+.about-card {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  margin-right: 1rem;
+
+  background-color: #c3cac7;   /* dark card bg */
+  padding: 2rem;
+  border-radius: 12px;
+  max-width: 800px;
+  width: 100%;
+
+  border: 2px solid #538d4e;
+}
+
+.about-image img {
+  width: 180px;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 12px;        /* rounded corners */
+  border: 2px solid #538d4e;  /* match your color theme */
+}
+
+
+#name-wordle {
+  font-family: sans-serif, Arial, Helvetica;
+}
+#name-wordle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1.5rem;
+    margin-bottom: 2rem; 
+    gap: .5rem;
+}
+
+.wordle-row {
+    display: grid;
+    grid-template-columns: repeat(5, 61px); /* 5 tiles */
+    gap: .5rem;
+}
+
+#name-wordle .tile {
+    width: 62px;
+    height: 62px;
+    display: flex;
+    border: 1px solid #494949;
+
+    align-items: center; /* centers vertically */
+    justify-content: center;
+
+    background-color: transparent;
+    
+    font-size: 2.2rem;
+    font-weight: bold;
+    color: transparent;
+}
+
+/* what's rotated */
+#name-wordle .tile .flip {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 2.2rem;
+  font-weight: bold;
+  border: 2px solid #494949;
+
+  color: white; /* hidden before reveal */
+
+  background-color: transparent;
+
+  transform-style: preserve-3d;
+  transform-origin: center;
+  transform: rotateX(90deg); /* flipped down initially */
+}
+
+
+.tile .flip.reveal {
+    animation: flip-in 2s ease forwards;
+    color: white;
+}
+
+#name-wordle .flip.reveal.green  { background-color: #538d4e; }
+#name-wordle .flip.reveal.yellow { background-color: #c9b458; }
+#name-wordle .flip.reveal.gray   { background-color: #404040; }
+
+
+@keyframes flip-in {
+  0% {
+    transform: rotateX(90deg);
+  }
+  100% {
+    transform: rotateX(0deg);
+  }
 }
