change link colors

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ header {
 }
 
 a:link {
-  color: #31ad25; /* Unvisited link color */
+  color: #138b08; /* Unvisited link color */
 }
 
 a:visited {
