--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,10 @@ body {
     font-family: 'Courier New', Courier, monospace;
 }
 
-h1 {
+.intro h1 {
     color: #538d4e;
     font-family: monospace;
+    margin-top: 3rem;
     text-align:  center;
     font-size: 1.3rem;
     font-style: italic;
@@ -13,8 +14,30 @@ h1 {
 header {
     color: #2b6b25;
     margin: 2rem;
-    font-size: 20px;
+    font-size: 25px;
 }
+
+.page-title h1 {
+    color: #538d4e;
+    font-family: "Times New Roman";
+    padding-bottom: 0.25rem;
+}
+.page-title h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.page-title h1 {
+  color: #538d4e;
+  font-size: 2rem;
+  font-weight: 600;
+  letter-spacing: 0.08em;
+}
+
 
 a:link {
   color: #138b08; /* Unvisited link color */
@@ -45,6 +68,7 @@ a:active {
     display: grid;
     grid-template-columns: 180px 1fr;
     margin-top: 3rem;
+    margin-bottom: 5rem;
     gap: 2rem;
     align-items: center;
 
@@ -112,6 +136,7 @@ a:active {
   max-width: 1000px;
   width: 100%;
   border: 2px solid #538d4e;
+  margin-bottom: 4rem;
 
   color: #121213;
   line-height: 1.6;
@@ -182,6 +207,15 @@ a:active {
     display: grid;
     grid-template-columns: repeat(5, 61px); /* 5 tiles */
     gap: .5rem;
+}
+
+.wordle-title {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 61px;
+  gap: 0.5rem;
+  margin-top: 2rem;
+  justify-content: center;
 }
 
 #name-wordle .tile {
